# ogre-gpgpu

./: CMakeLists.txt  Demos.sln  README.md  README.txt  prepare.vcproj
ArToolKitPlusDemo/script/: ArToolKitPlusDemo.vcproj
ArToolKitPlusDemo/src/: OgreAppFrameListener.cpp  TrackingSystem.cpp  VideoDeviceManager.cpp  main.cpp
BundlerMatcher/include/: BundlerMatcher.h
BundlerMatcher/script/: BundlerMatcher.vcproj
BundlerMatcher/src/: main.cpp
Demos/: Demos.sln  Ogre.vsprops  prepare.vcproj
Demos/Dependencies/: README.txt
GPUSurf/include/: Feature.h
GPUSurf/script/: GPUSurf.vcproj  GPUSurf.vsprops
GPUSurf/src/: Feature.cpp  GPUSurf.cu  main.cpp
GPUSurfDemo/include/: VideoDeviceManager.h
GPUSurfDemo/src/: OgreAppLogic.cpp  StatsFrameListener.cpp  VideoDeviceManager.cpp
GPUSurfDemo3/include/: GPUSurf.cuh  GPUSurf.h  OgreApp.h  OgreAppFrameListener.h  StatsFrameListener.h
GPUSurfDemo3/src/: GPUSurf.cpp  GPUSurf.cu  StatsFrameListener.cpp  VideoDeviceManager.cpp
GPUSurfFeatureDetector/include/: GPUSurfFeatureDetector.h  GPUSurfPictureDetector.h
GPUSurfFeatureDetector/script/: GPUSurfFeatureDetector.vcproj
GPUSurfFeatureDetector/src/: main.cpp
GPUSurfScriptGenerator/src/: main.cpp
OgreCanvas/script/: OgreCanvasDoxygen.vcproj
OgreCanvas/src/: DynamicTexture.cpp
OgreCanvasDemo/include/: OgreAppLogic.h
OgreCanvasDemo2/include/: Chrono.h
OgreCanvasDemo2/src/: Chrono.cpp
OgreCanvasV8/include/: CanvasContextV8Bindings.h  CanvasLogger.h  CanvasV8Context.h  CanvasV8Prerequisites.h
OgreCanvasV8/script/: OgreCanvasV8.vcproj
(+234 files in other folders)
